force-app/main/default/objects/CC_Servicio_Genesys__c/CC_Servicio_Genesys__c.object-meta.xml
<CustomObject>
    <label>Servicio Genesys</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Servicios Genesys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>