force-app/main/default/objects/CC_Servicio_Genesys__c/fields/CBK_Negocio__c.field-meta.xml
<CustomField>
    <fullName>CBK_Negocio__c</fullName>
    <label>Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>SACH</fullName>
            </value>
            <value>
                <fullName>CSBD</fullName>
            </value>
            <value>
                <fullName>HDT</fullName>
            </value>
            <value>
                <fullName>CAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>