force-app/main/default/objects/CC_Servicio_Genesys__c/fields/CC_Activo_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>CC_Activo_Salesforce__c</fullName>
    <formula>IF((NOT(ISBLANK(CC_Fecha_Inicio_Salesforce__c))) &amp;&amp; TODAY() &gt;= CC_Fecha_Inicio_Salesforce__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activo en Salesforce</label>
    <type>Checkbox</type>
</CustomField>