force-app/main/default/objects/CC_Servicio_Genesys__c/fields/CC_Canal_de_Entrada__c.field-meta.xml
<CustomField>
    <fullName>CC_Canal_de_Entrada__c</fullName>
    <label>Canal de Entrada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telefono</fullName>
                <label>Teléfono</label>
            </value>
            <value>
                <fullName>CallMeBack</fullName>
            </value>
            <value>
                <fullName>CallMeNow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>