force-app/main/default/objects/CC_Servicio_Genesys__c/fields/CC_Canal_Procedencia__c.field-meta.xml
<CustomField>
    <fullName>CC_Canal_Procedencia__c</fullName>
    <label>Canal procedencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Canal_Procedencia</valueSetName>
    </valueSet>
</CustomField>