force-app/main/default/objects/CC_Servicio_Genesys__c/fields/CC_Codigo__c.field-meta.xml
<CustomField>
    <fullName>CC_Codigo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Código</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>