force-app/main/default/objects/CC_Servicio_Genesys__c/fields/CC_Consultas_Empleados__c.field-meta.xml
<CustomField>
    <fullName>CC_Consultas_Empleados__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si está checked, permite a llamadas realizadas con este servicio hacer consultas y transferencias a números de teléfono de empleados gestores de un caso.</description>
    <label>Consultas a empleados</label>
    <type>Checkbox</type>
</CustomField>