force-app/main/default/objects/CC_Servicio_Genesys__c/fields/CC_Encuesta__c.field-meta.xml
<CustomField>
    <fullName>CC_Encuesta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Encuesta</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_Servicio_Genesys__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Encuesta</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CC_Servicio_Genesys__c</referenceTo>
    <relationshipLabel>Servicios Genesys</relationshipLabel>
    <relationshipName>Servicios_Genesys</relationshipName>
    <type>Lookup</type>
</CustomField>