force-app/main/default/objects/CC_Servicio_Genesys__c/fields/CC_Fecha_Inicio_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Inicio_Salesforce__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de inicio en Salesforce</label>
    <type>Date</type>
</CustomField>