force-app/main/default/objects/CC_Servicio_Genesys__c/fields/CC_Prefijo__c.field-meta.xml
<CustomField>
    <fullName>CC_Prefijo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Solo aplica para el widget SISGEN</inlineHelpText>
    <label>Prefijo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>