force-app/main/default/objects/CC_Servicio_Genesys__c/fields/CC_Primer_Aviso__c.field-meta.xml
<CustomField>
    <fullName>CC_Primer_Aviso__c</fullName>
    <label>Primer aviso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>