force-app/main/default/objects/CC_Servicio_Genesys__c/fields/CC_Principal__c.field-meta.xml
<CustomField>
    <fullName>CC_Principal__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Principal</label>
    <type>Checkbox</type>
</CustomField>