force-app/main/default/objects/CC_Servicio_Genesys__c/fields/CC_Tipo__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Segundo nivel</fullName>
            </value>
            <value>
                <fullName>Servicio</fullName>
            </value>
            <value>
                <fullName>Tercer nivel</fullName>
            </value>
            <value>
                <fullName>Empleado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>