force-app/main/default/objects/CC_Servicio_Genesys__c/fields/CC_Tipo_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_Cliente__c</fullName>
    <label>Tipo de cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Empleado</fullName>
            </value>
            <value>
                <fullName>CSI Bankia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>