force-app/main/default/objects/CC_Servicio_Genesys__c/fields/CC_VDN__c.field-meta.xml
<CustomField>
    <fullName>CC_VDN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VDN</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>