force-app/main/default/objects/CC_Servicio_Genesys__c/fields/CSBD_Producto__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Producto__c</fullName>
    <description>Campo utilizado para mapear con la oportunidad.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>