force-app/main/default/objects/CC_Servicio_Genesys__c/recordTypes/CC_Encuesta.recordType-meta.xml
<RecordType>
    <fullName>CC_Encuesta</fullName>
    <active>true</active>
    <label>Encuesta</label>
</RecordType>