force-app/main/default/objects/CC_Servicio_Genesys__c/recordTypes/CC_Servicio.recordType-meta.xml
<RecordType>
    <fullName>CC_Servicio</fullName>
    <active>true</active>
    <label>Servicio</label>
</RecordType>