force-app/main/default/objects/CC_Servicio_Genesys__c/recordTypes/CC_Servicios_Salientes.recordType-meta.xml
<RecordType>
    <fullName>CC_Servicios_Salientes</fullName>
    <active>true</active>
    <label>Servicios Salientes</label>
</RecordType>