force-app/main/default/objects/CC_Servicio_Genesys__c/validationRules/Debe_informar_el_canal_de_entrada.validationRule-meta.xml
<ValidationRule>
    <fullName>Debe_informar_el_canal_de_entrada</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(CC_Tipo_Cliente__c, &apos;Cliente&apos;),ISPICKVAL(CC_Canal_de_Entrada__c,&apos;&apos;))</errorConditionFormula>
    <errorMessage>Debe informar el canal de entrada</errorMessage>
</ValidationRule>