force-app/main/default/objects/CC_Servicio_Genesys__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CC_Codigo__c</columns>
    <columns>CC_Tipo__c</columns>
    <columns>CC_Primer_Aviso__c</columns>
    <columns>CC_Segundo_Aviso__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CC_Principal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>