force-app/main/default/objects/CC_Servicio_Genesys__c/listViews/CC_Encuestas.listView-meta.xml
<ListView>
    <fullName>CC_Encuestas</fullName>
    <columns>NAME</columns>
    <columns>CC_Codigo__c</columns>
    <columns>CC_VDN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Servicio_Genesys__c.CC_Encuesta</value>
    </filters>
    <label>Encuestas</label>
</ListView>