force-app/main/default/objects/CC_Servicio_Genesys__c/listViews/CC_Servicios.listView-meta.xml
<ListView>
    <fullName>CC_Servicios</fullName>
    <columns>CC_Fecha_Inicio_Salesforce__c</columns>
    <columns>NAME</columns>
    <columns>CC_Codigo__c</columns>
    <columns>KIN_Cola_Id_GC__c</columns>
    <columns>CC_Tipo_Cliente__c</columns>
    <columns>CC_Activo_Salesforce__c</columns>
    <columns>CC_Tipo__c</columns>
    <columns>CC_Principal__c</columns>
    <columns>CC_Canal_Procedencia__c</columns>
    <columns>CC_Encuesta__c</columns>
    <columns>CC_Primer_Aviso__c</columns>
    <columns>CC_Segundo_Aviso__c</columns>
    <columns>CC_Prefijo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Servicio_Genesys__c.CC_Servicio</value>
    </filters>
    <label>Servicios</label>
</ListView>