force-app/main/default/objects/CC_Servicio_Genesys__c/listViews/CC_Todos.listView-meta.xml
<ListView>
    <fullName>CC_Todos</fullName>
    <columns>NAME</columns>
    <columns>CC_Codigo__c</columns>
    <columns>CC_Activo_Salesforce__c</columns>
    <columns>CC_Canal_Procedencia__c</columns>
    <columns>CC_VDN__c</columns>
    <columns>CC_Encuesta__c</columns>
    <columns>CC_Tipo_Cliente__c</columns>
    <columns>KIN_Cola_Id_GC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Servicio_Genesys__c.CC_Servicio</value>
    </filters>
    <filters>
        <field>CBK_Negocio__c</field>
        <operation>equals</operation>
        <value>CC</value>
    </filters>
    <label>Servicios CC</label>
</ListView>