force-app/main/default/objects/CC_Servicio_Genesys__c/listViews/Servicios_HDT.listView-meta.xml
<ListView>
    <fullName>Servicios_HDT</fullName>
    <columns>CC_Fecha_Inicio_Salesforce__c</columns>
    <columns>NAME</columns>
    <columns>CC_Codigo__c</columns>
    <columns>CC_Activo_Salesforce__c</columns>
    <columns>CC_Tipo__c</columns>
    <columns>CC_Principal__c</columns>
    <columns>CC_Canal_Procedencia__c</columns>
    <columns>CC_VDN__c</columns>
    <columns>CC_Encuesta__c</columns>
    <columns>CC_Primer_Aviso__c</columns>
    <columns>CC_Segundo_Aviso__c</columns>
    <columns>CC_Tipo_Cliente__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Servicio_Genesys__c.CC_Servicio</value>
    </filters>
    <filters>
        <field>CBK_Negocio__c</field>
        <operation>equals</operation>
        <value>HDT</value>
    </filters>
    <label>Servicios HDT</label>
</ListView>